# moobler

./: README.md  base_prompt.txt  package.json  pyproject.toml  tsconfig.json
context/: ARCHITECTURE.md  CLAUDE_INTEGRATION.md  KEYBINDINGS.md  OVERLAY.md  PROJECT_OVERVIEW.md  SANDBOX_UX.md  TODO.md
data/: curated_tips.json
docker/: Dockerfile  entrypoint.sh
scripts/overlay/: __init__.py  debug_keys.py  keybind_parser.py  keyboard_listener.py  main.py  sequence.py  window.py
src/: __init__.py  app.tsx  index.tsx  main.py
src/ai/: __init__.py  challenge_gen.py  client.py  smart_suggester.py  suggester.py
src/challenges/: __init__.py  engine.py  types.py
src/config/: __init__.py  merger.py  models.py  parser.py
src/container/: __init__.py  manager.py  tmux_bridge.py
src/discovery/: __init__.py  curated.py  github_scraper.py
src/lib/: ai.ts  config.ts  docker.ts  github.ts
src/prompts/: challenge.txt  suggestions-system.txt  suggestions-user.txt
src/screens/: Config.tsx  Discover.tsx  Home.tsx  Sandbox.tsx
src/storage/: __init__.py  database.py  progress.py
src/ui/: __init__.py  app.py
src/ui/screens/: __init__.py  config_view.py  discover.py  home.py  sandbox.py
src/ui/widgets/: __init__.py  keybind_card.py
