[project]
name = "tmux-learn"
version = "0.1.0"
description = "AI-powered tmux tutor with interactive challenges"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.40.0",
    "anthropic>=0.18.0",
    "docker>=7.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.26.0",
    "rich>=13.0.0",
    "aiosqlite>=0.19.0",
]

[project.scripts]
tmux-learn = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
